<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:layout_width="300dip"
        android:layout_height="180dip">

    <TableLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="32sp"
                android:text="@string/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/person_name"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="32sp"
                android:text="@string/person_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/person_age"
                android:ems="10"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/person_sex"
                android:textSize="32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBtn_Male"
                    android:layout_marginRight="20dip"
                    android:textSize="24sp"
                    android:text="@string/person_sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/RBtn_Female"
                    android:textSize="24sp"
                    android:text="@string/person_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_confirm"
            android:textSize="24sp"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_cancel"
            android:textSize="24sp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    </LinearLayout>
</LinearLayout>